Trying to solve hover dropzone flicker bug

--- a/scss/_new-album.scss
+++ b/scss/_new-album.scss
@@ -41,7 +41,7 @@
 
 		.dz-message-hovered {
 			// @include transform(0, 1000px);
-			top:1000px;
+			top:100%;
 		}
 	}
 
@@ -49,7 +49,7 @@
 		background-color:$midGrey;
 		.dz-message-empty {
 			// @include transform(0, -1000px);
-			top:-1000px;
+			top:-100%;
 		}
 		.dz-message-hovered {
 			// @include transform(0, 0);
